syntax = "proto3";
package schema.v2;

message BusinessLogicResponse {
	int32 project_generate_queue_id = 1;
	int32 project_id = 2;
  repeated BusinessLogic business_logics = 3;
}

message BusinessLogic {
  string node_id = 1;
  string block_type = 2;
  repeated Content content = 3;
  Property properties = 4;
  int32 project_id = 5;
	repeated string children = 6;

	message Content {
		string type = 1;
		string value = 2;
	}

	message Property {
		string category = 1;
    int32 user_case_id = 2;
	}
}
