syntax = "proto3";
package schema.v2;

message UserCaseCreation {
	int32 project_generate_queue_id = 1;
	int32 project_id = 2;
  repeated UserCase user_cases = 3;

	oneof state {
		Progress progress = 4;
		Error error = 5;
	}

	message Progress {
		string message = 1;
	}

	message Error {
		string message = 1;
	}
}

message UserCase {
  string name = 1;
  string node_id = 2;
  string parent_node_id = 3;
  string block_type = 4;
  repeated Content content = 5;
  Property properties = 6;
  int32 project_id = 7;
	repeated UserCase children = 8;

	message Content {
		string type = 1;
		string value = 2;
	}

	message Property {
		string category = 1;
	}
}

message UserCaseCreationResponse {
	int32 project_generate_queue_id = 1;
	string message = 2;
	Module module = 3;

	enum Module {
		UNSPECIFIED = 0;
		BUSINESS_LOGIC = 1;
		ERD = 2;
		API = 3;
	}
}
